[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/level3.png" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Shattered3.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fairy2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fairy1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Level3.gd" type="Script" id=6]
[ext_resource path="res://bgm/level3.ogg" type="AudioStream" id=7]

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( 702, 141 )
b = Vector2( 639, 0 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( -110, 340 )
b = Vector2( 302, 339 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 344, 293 )
b = Vector2( 410, 191 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 166, 370 )
b = Vector2( 583, 367 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 708, 157 )
b = Vector2( 714, 98 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( 708, 157 )
b = Vector2( 622, -22 )

[sub_resource type="SegmentShape2D" id=8]
a = Vector2( 587, -6 )
b = Vector2( 582, 26 )

[sub_resource type="SegmentShape2D" id=9]
a = Vector2( 557, -3 )
b = Vector2( 595, -3 )

[sub_resource type="SegmentShape2D" id=10]
a = Vector2( 557, -3 )
b = Vector2( 596, 26 )

[node name="Level3" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Fairy2" parent="." instance=ExtResource( 4 )]
position = Vector2( 477, 183 )

[node name="Fairy3" parent="." instance=ExtResource( 4 )]
position = Vector2( 281, 102 )

[node name="Fairy1" parent="." instance=ExtResource( 5 )]
position = Vector2( 356, 141 )

[node name="Fairy5" parent="." instance=ExtResource( 5 )]
position = Vector2( 83, 131 )

[node name="Fairy4" parent="." instance=ExtResource( 5 )]
position = Vector2( 147, 126 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 311, 291 )
__meta__ = {
"_edit_group_": true
}

[node name="House" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="House"]
position = Vector2( 445, 77 )
polygon = PoolVector2Array( -55, 68, -20, 79, 62, 38, 7, 1, -9, 4 )

[node name="Border" type="StaticBody2D" parent="."]

[node name="Right" type="CollisionShape2D" parent="Border"]
position = Vector2( -123, 72 )
shape = SubResource( 6 )

[node name="Down" type="CollisionShape2D" parent="Border"]
position = Vector2( 211, -26 )
shape = SubResource( 4 )

[node name="Down2" type="CollisionShape2D" parent="Border"]
position = Vector2( 169, 21 )
shape = SubResource( 5 )

[node name="Up" type="CollisionShape2D" parent="Border"]
position = Vector2( -66, -294 )
shape = SubResource( 3 )

[node name="Left" type="CollisionShape2D" parent="Border"]
position = Vector2( -606, 157 )
shape = SubResource( 2 )

[node name="Left2" type="CollisionShape2D" parent="Border"]
position = Vector2( -600, 100 )
shape = SubResource( 7 )

[node name="Left3" type="CollisionShape2D" parent="Border"]
position = Vector2( -560, 53 )
shape = SubResource( 8 )

[node name="Left4" type="CollisionShape2D" parent="Border"]
position = Vector2( -530, 50 )
shape = SubResource( 9 )

[node name="Left5" type="CollisionShape2D" parent="Border"]
position = Vector2( -494, 50 )
shape = SubResource( 10 )

[node name="Shattered3" parent="." instance=ExtResource( 3 )]
position = Vector2( 50, 29 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="dead" from="Fairy2" to="." method="_on_Fairy_dead"]
[connection signal="shoot" from="Fairy2" to="." method="_on_Fairy_shoot"]
[connection signal="dead" from="Fairy3" to="." method="_on_Fairy_dead"]
[connection signal="shoot" from="Fairy3" to="." method="_on_Fairy_shoot"]
[connection signal="dead" from="Fairy1" to="." method="_on_Fairy_dead"]
[connection signal="shoot" from="Fairy1" to="." method="_on_Fairy_shoot"]
[connection signal="dead" from="Fairy5" to="." method="_on_Fairy_dead"]
[connection signal="shoot" from="Fairy5" to="." method="_on_Fairy_shoot"]
[connection signal="dead" from="Fairy4" to="." method="_on_Fairy_dead"]
[connection signal="shoot" from="Fairy4" to="." method="_on_Fairy_shoot"]
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
